# supy-fwas

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/sfwas/: SFClans.py  SFPlayer.py  SFPlayerClan.py  __init__.py  supyfwa.py
src/sfwas/Base/: __init__.py  abc.py  bases.py  exceptions.py
src/sfwas/Utils/: Tags.py  __init__.py  enums.py
